<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context="com.stockbit.login.LoginFragment">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_with_google"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="@dimen/marginNormal"
            android:layout_marginVertical="@dimen/marginSmall"
            app:icon="@drawable/ic_google_48dp"
            app:iconGravity="start"
            app:iconTint="@null"
            android:text="@string/label_login_with_google"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="@color/colorBlack" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_with_facebook"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:icon="@drawable/ic_facebook_36dp"
            app:iconGravity="start"
            app:iconTint="@null"
            android:layout_marginHorizontal="@dimen/marginNormal"
            android:layout_marginVertical="@dimen/marginSmall"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="@string/label_login_with_facebook"
            android:layout_below="@id/btn_login_with_google"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="@color/colorBlack" />

        <LinearLayout
            android:id="@+id/spliter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login_with_facebook"
            android:layout_margin="@dimen/marginNormal"
            android:orientation="horizontal">

            <View
                android:layout_width="100dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_or"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/marginNormal"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <View
                android:layout_width="100dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@android:color/darker_gray" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginNormal"
            app:boxBackgroundColor="@color/colorWhite"
            android:layout_below="@id/spliter"
            app:hintEnabled="false"
            app:hintAnimationEnabled="false"
            android:layout_marginHorizontal="@dimen/marginNormal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username_or_email"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_layout_username"
            app:boxBackgroundColor="@color/colorWhite"
            app:hintEnabled="false"
            app:hintAnimationEnabled="false"
            android:layout_marginHorizontal="@dimen/marginNormal"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_layout_password"
            android:layout_alignEnd="@id/edt_layout_password"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="@dimen/marginSmall"
            android:layout_marginEnd="@dimen/marginSmall"
            android:text="@string/label_forgot_password"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_forgot_password"
            android:layout_marginHorizontal="@dimen/marginNormal"
            android:layout_marginTop="@dimen/marginNormal"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/label_login"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="@color/colorWhite" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_with_fingerprint"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_marginHorizontal="@dimen/marginNormal"
            android:layout_marginVertical="@dimen/marginSmall"
            android:text="@string/label_login_with_fingerprint"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="@color/colorPrimary"
            app:strokeColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/marginNormal"
            android:layout_below="@id/btn_login_with_fingerprint"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_not_have_account"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_register_now"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="@dimen/marginSmall"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>

    </RelativeLayout>
</layout>